--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.login-btn {
+  background: #e60023;
+  color: white;
+  border: 0px;
+  height: 40px;
+  display: inline-block;
+  border-radius: 20px !important;
+  -webkit-font-smoothing: antialiased;
+  padding: 0px 18px;
+  font-size: 15px;
+  font-weight: bold;
+  cursor: pointer;
+  margin-top: 8px;
+  vertical-align: middle;
+  text-align: center;
+  background-color: rgb(230, 0, 35);
+  color: rgb(255, 255, 255);
+  width: 100%;
+}
