--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,14 @@ code {
   color: rgb(255, 255, 255);
   width: 100%;
 }
+
+.register-btn {
+  border-style: none;
+  min-height: 40px;
+  padding: 8px 12px;
+  font-weight: 500;
+  font-size: 16px;
+  font: inherit;
+  border-radius: 24px;
+  box-sizing: border-box;
+}
